[package]
name = "clox"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[features]
default = []
DEBUG_TRACE_EXECUTION = []
DEBUG_PRINT_CODE = []
DEBUG_LOG_GC = []
DEBUG_STRESS_GC = []


[profile.release]
debug = true
